--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation - Easy Tutorials YouTube Channel</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
 </head>
 <body>
   <div class="container">
@@ -19,19 +20,19 @@
 
       <div class="input-group">
         <label>Phone No.</label>
-        <input type="tel" placeholder="123 456 7890">
+        <input type="tel" placeholder="123 456 7890" id="contact-phone" onkeyup="validatePhone()">
         <span id="phone-error"></span>
       </div>
 
       <div class="input-group">
         <label>Email Id</label>
-        <input type="email" placeholder="Enter Email" >
+        <input type="email" placeholder="Enter Email" id="contact-email" onkeyup="validateEmail()">
         <span id="email-error"></span>
       </div>   
 
       <div class="input-group">
         <label>Your Message</label>
-        <textarea rows="5" placeholder="Enter your message"></textarea>
+        <textarea rows="5" placeholder="Enter your message" id="contact-message" onkeyup="validateMessage()" ></textarea>
         <span id="message-error"> </span>
       </div>
 
